# gitex

./: .editorconfig  .gitignore  .shellcheckrc  AGENTS.md  CLAUDE.md  LICENSE.txt  README.adoc  README.md  TODO.md  check  fix  pyproject.toml
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: BUG.md  EPIC.md  REFACTORING.md  SPIKE.md  SUPPORT.md
.github/workflows/: commit-validation.yaml  integration.yaml  integration.yml  sync-labels.yaml  validate-commit-messages.yaml
docs/: README.adoc  README.md  configuration.adoc  configuration.md  installation.adoc  installation.md  requirements.adoc  requirements.md  runtime-tests.adoc  runtime-tests.md  static-analysis.adoc  static-analysis.md  testing.adoc
docs/usage/: README.adoc  README.md  git-amend.adoc  git-amend.md  git-author.adoc  git-author.md  git-backup.adoc  git-backup.md  git-br.adoc  git-br.md  git-branches.adoc  git-branches.md  git-changes.adoc  git-changes.md  git-cl.adoc  git-cl.md  git-cm.adoc  git-cm.md  git-co.adoc  git-co.md  git-configure.adoc  git-configure.md  git-contrib.adoc  git-contrib.md  git-current.adoc  git-current.md  (+91 more)
lib/: README.adoc  ansi-codes.sh  print.sh
test/: conftest.py  helper.py  test_git_amend.py  test_git_author.py  test_git_backup.py  test_git_br.py  test_git_branches.py  test_git_changes.py  test_git_cl.py  test_git_cm.py  test_git_co.py  test_git_configure.py  test_git_contrib.py  test_git_current.py  test_git_default.py  test_git_delete.py  test_git_discard.py  test_git_down.py  test_git_download.py  test_git_feature.py  test_git_fell.py  test_git_fetched.py  test_git_ff.py  test_git_filelog.py  test_git_fixup.py  test_git_graph.py  test_git_history.py  test_git_ignore.py  test_git_ignored.py  test_git_last.py  test_git_orphan.py  test_git_pick.py  test_git_push_all.py  test_git_rebase_all.py  test_git_recent.py  test_git_remotes.py  test_git_resume.py  test_git_reword.py  test_git_squash.py  test_git_staged.py  (+21 more)
(+6 files in other folders)
