[tool.poetry]
name = "gitex"
version = "0.1.0"
description = "Git extensions and utilities"
authors = ["Kieran Potts <kieranpotts@users.noreply.github.com>"]
readme = "README.adoc"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
gitpython = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
